--- a/Rails/application/app/views/articles/index.html.erb
+++ b/Rails/application/app/views/articles/index.html.erb
@@ -56,10 +56,8 @@
 
   <p><%= link_to "Show article", article_path(article) %></p>
 
-  <!-- Скроем возможности редактирования и удаления от всех кроме автора статьи -->
-
-  <!-- 1. Сравнивает сущности активного юзера и юзера к которому привязана статья  -->
-  <% if current_user == article.user %> <!-- Сработает так же как current_user.id == article.user_id. Можно вынести в хэлпер  -->
+  <!-- Скроем возможности редактирования и удаления от всех кроме автора статьи: -->
+  <% if current_user == article.user %> <!-- Сравнивает сущности активного юзера и юзера к которому привязана статья. Сработает так же как current_user.id == article.user_id. Можно вынести в хэлпер  -->
     <!-- article.user - возвращает объект юзера которому принадлежит статья, как было с comments только наоборот -->
     <p><%= link_to "Edit article", edit_article_path(article) %></p>
     <p><%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
