--- a/Rails/application/app/views/shared/_menu.html.erb
+++ b/Rails/application/app/views/shared/_menu.html.erb
@@ -55,7 +55,7 @@
 
 
 
-  <!--                                    Вариант меню с переключением локалей i18n             -->
+  <!--                                Вариант меню с переводами и переключением локалей i18n -->
 
   <header class="p-3 bg-dark text-white">
     <div class="container">
