--- a/Rails/application/app/views/layouts/application.html.erb
+++ b/Rails/application/app/views/layouts/application.html.erb
@@ -71,10 +71,10 @@
         <ul class="dropdown-menu"> <!-- дропдаун с выбором локали -->
           <% I18n.available_locales.each do |locale| %>
             <li>
-              <% if I18n.locale == locale %> <!-- если текущая локаль равна локали из списка доступных -->
-                <%= tag.span t(locale), class: 'dropdown-item' %> <!-- отображаем просто название локали -->
+              <% if I18n.locale == locale %> <!-- если текущая локаль равна конкретной локали, одной из списка доступных -->
+                <%= tag.span t(locale), class: 'dropdown-item' %> <!-- отображаем ее просто как текст с названием локали -->
                 <!-- t(locale) - это перевод названия локали на нужный язык -->
-              <% else %> <!-- если текущая локаль не равна локали из переменной -->
+              <% else %> <!-- если текущая локаль не равна локали из переменной, тогда сделаем ее ссылкой на переключение -->
                 <%= link_to t(locale), url_for(locale: locale), class: 'dropdown-item' %> <!-- ссылка переключения локали, добавляет имя локали в URL в (:locale) -->
                 <!-- В уроке было root_path(locale: locale) -->
               <% end %>
