--- a/Rails/application/app/views/questions(turbo)/show.html.erb
+++ b/Rails/application/app/views/questions(turbo)/show.html.erb
@@ -7,12 +7,13 @@
   <!-- так добавится и турбофрэйм теги из _question.html.erb, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
 </article>
 
-<!-- 10. динамическое создание и удаление комментариев (удаляем html_id) -->
+<!-- динамическое создание и удаление комментариев (удаляем html_id) -->
 <%= render 'comments/commentable', commentable: @question, comment: @comment#, html_id: 'questionComments' %>
 
 <h2 class="my-3"><%= t '.write_answer' %></h2>
 
-<%= render 'answers/form' %> <!-- теперь форма рендерится тут в турбофрэйме -->
+<!-- теперь форма для создания ответа рендерится тут в турбофрэйме, а для редактирования она отрендерится через ссылку в _answer -->
+<%= render 'answers/form' %>
 
 <h2 class="mt-5 mb-3"><%= t '.answers' %></h2>
 
