--- a/Rails/application/app/views/answers/edit.html.erb
+++ b/Rails/application/app/views/answers/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit answer</h1>
+<% provide :page_title, t('.title') %>
+<% currently_at t('menu.questions') %>
+
+<h1><%= t '.title' %></h1>
 
 <%= render 'form' %>
-<!-- тут уже не пишем полный путь, тк и это директория answers -->
