--- a/web/Sinatra/views/a_index.erb
+++ b/web/Sinatra/views/a_index.erb
@@ -4,12 +4,12 @@
 <p>Your password: <%= @password %></p>
 <p><%= @denied %></p>
 
-<!-- Форма для метода post на странице по адресу '/' через нее отправляем данные на наш сервер -->
+<!-- Форма для отправки POST-запроса с данными на сервер, он будет обработан на нашем сервере методом post с аргументом '/' -->
 <form action="/" method="POST">
-  <!-- action="/"  - задает обработчик определенного URL, в который будут отправляться данные из формы -->
+  <!-- action="/"     - задает URL для передачи данных формы в соответсвующий ему обработчик -->
   <!-- method="POST"  - задает метод при помощи которого будут отправлены данные из формы  -->
 
-  <input type="text" name="aaa"> <!-- Данные введенные пользователем в это поле обозначаются значением "aaa" атрибута name и помещаются в метод params в виде :name => 'введенный пользователем текст' -->
+  <input type="text" name="aaa"> <!-- name="aaa" - зададим для поля атрибут name значение которого(тут "aaa") будет ключем в методе params под которым будут значением данные что пользователь ввел в это поле (:name => 'введенный пользователем текст') -->
   <input type="password" name="bbb">
-  <input type="submit"> <!-- активизирует пост запрос и отправляет данные в обработчик с методом и URL-адресом, из значений атрибутов тега формы -->
+  <input type="submit"> <!-- активизирует POST-запрос и отправляет данные в обработчик с методом и URL-адресом, из значений атрибутов тега формы -->
 </form>
