--- a/web/Sinatra/views/layout.erb
+++ b/web/Sinatra/views/layout.erb
@@ -6,13 +6,15 @@
     <link href="/barbershop_styles.css" rel="stylesheet" media="all">
   	<!-- /barbershop_styles.css  - используем относительный путь от корня сайта(папка public тоже как корень) -->
     <!-- Очистите кэш страницы если не реагиркует на изменения в css фаиле - ctrl + shift + R (Mac: cmd + shift + r)-->
+
     <script src="/vendor/jquery-1.9.1.min.js"></script> <!-- Вар 1 бутстрапное ? -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- Вар 2 -->
-    <script src="/pizzashop.js"></script> <!-- подключение в Синатре через / -->
+
+    <script src="/pizzashop.js"></script> <!-- подключение скрипта в Синатре через / -->
   </head>
   <body>
 
-    <h2 style="color: lightblue;"> <!-- блок меню -->
+    <h2 style="color: lightblue;"> <!-- блок общего меню для всех страниц -->
       <a href="/">Главная</a><br>
       <a href="/showusers">Показать вывод из БД(Барбершоп)</a><br>
       <a href="/new">Написать пост(Лепрозорий)</a><br>
@@ -28,3 +30,15 @@
 
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
