--- a/web/Sinatra/views/barbershop_index.erb
+++ b/web/Sinatra/views/barbershop_index.erb
@@ -10,7 +10,7 @@
 	<input type="text" name="phone" value="<%= @phone %>"><br>
 
 	<label>Когда вас ждать?</label><br>
-	<input type="datetime-local" name="date_time" value="<%= @date_time %>"><br> <!-- в value переменная вставляется аналогично и для поля datetime-local, а незаполненное тоже считается пустой строкой -->
+	<input type="datetime-local" name="date_time" value="<%= @date_time %>"><br> <!-- для поля datetime-local переменная вставляется аналогично, а незаполненное тоже считается пустой строкой -->
 
 	<label>Выберите цвет</label><br>
 	<input type="color" name="color" value="<%= @color %>"><br> <!-- сохраняет как хэш например #22c9bd -->
