--- a/web/Sinatra/views/barbershop_showusers.erb
+++ b/web/Sinatra/views/barbershop_showusers.erb
@@ -1,10 +1,14 @@
-<!--                                     Вариант вывода из БД 1.
-Который я сам сделал как ДЗ к уроку 26. -->
+<!--                                     Вариант вывода из БД 1. -->
+
 <!-- Создаем таблицу и интегрируем в нее переменные с тегами для столбцов и данными из бд в них -->
 <table border="1" width="1100px" style="font-size: 2rem;">
   <caption>Записавшиеся:</caption>
-  <thead><tr><%= @columns %></tr></thead>
-  <tbody><%= @users %></tbody>
+  <thead>
+    <tr><%= @columns %></tr>
+  </thead>
+  <tbody>
+    <%= @users %>
+  </tbody>
 </table>
 
 
@@ -13,7 +17,7 @@
 
 <%= @results %> <!-- пример вывода объекта запроса(при выводе всего объекта в html к массиву хэшей применяется метод .to_s похоже) -->
 
-<!-- Мб не лучшее решение тк длинные(больше 7 ?) хэши не гарантируют порядок -->
+<!-- Мб не лучшее решение тк длинные(больше 7 ?) хэши не гарантируют порядок, мб лучше так юзать вывод как массив -->
 <table border="1" width="1100px" style="font-size: 2rem;">
   <caption>Таблица 1:  Все колонки</caption>
   <thead>
