--- a/Rails/application/app/views/articles/new.html.erb
+++ b/Rails/application/app/views/articles/new.html.erb
@@ -13,9 +13,13 @@
       <!--  Поля формы -->
     </form>
   <!-- url: articles_path (можно и захардкодить - url: '/articles') - запрос POST '/articles'. Добавляем хэлпер пути, те меняем путь, тк по умолчанию у form_for :article стоит URL GET "/articles/new" и при нажатии кнопки произойдет ошибка(тк по данному URL существует только GET-обработчик в экшене new). Для POST используется экшен create c URL '/articles', соотв надо перенаправить форму на него. Теперь если посмотреть код то адрес в теге формы изменился: -->
-    <form action="/articles" accept-charset="UTF-8" method="post"><!--  Поля формы --></form>
+    <form action="/articles" accept-charset="UTF-8" method="post">
+      <!--  Поля формы -->
+    </form>
   <!-- data: {turbo:false} - нужно дописать, если в приложении используется turbo, иначе форма не отправится/обработается корректно, в теге формы появится новый атрибут -->
-    <form data-turbo="false" action="/articles" accept-charset="UTF-8" method="post"><!--  Поля формы --></form>
+    <form data-turbo="false" action="/articles" accept-charset="UTF-8" method="post">
+      <!--  Поля формы -->
+    </form>
   <!-- url: '/articles', data: {turbo:false}  - это и все дополнительное это хэш -->
 
 
@@ -25,9 +29,10 @@
 
   <p>
     <%= f.label :title %><br> <!-- это будет: --> <label for="article_title">Title</label>
-      <!-- label - название/обозначение тега label -->
-      <!-- title - название столбца в таблице/модели -->
+    <!-- label - хэлпер тега label -->
+    <!-- title - название столбца в таблице/модели для создания for -->
     <%= f.text_field :title %> <!-- будет: --> <input type="text" name="article[title]" id="article_title" />
+    <!-- title - название столбца в таблице/модели для создания name и id -->
   </p>
 
   <p>
