--- a/Rails/application/app/views/layouts/application.html.erb
+++ b/Rails/application/app/views/layouts/application.html.erb
@@ -91,6 +91,7 @@
     <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили) -->
     <main class="container mt-3">
       <% flash.each do |k, v| %>
+        <!-- flash - это хранилище похожее на хэш но не являющееся хэшэм ? -->
         <!-- k тут передает :success; v передает "Question created!" -->
 
         <!-- Вариант 1: синтаксис html -->
