--- a/Rails/application/app/views/articles/show.html.erb
+++ b/Rails/application/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), а нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется и лучше для генерации нужного URL использовать синтаксис из 2х компонентов связанных сущностей:  -->
 <%= form_for([@article, @comment]) do |f| %>
-<!-- но мы не создавали переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается это представление с формой,потому используем метод build прямо в форме -->
+<!-- но тут мы не создавали переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается это представление с формой, потому либо нужно ее создать, либо используем метод build прямо в форме -->
 <!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут со значением nil, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <!-- Теперь у нас есть нужный URL '/articles/:article_id/comments' в атрибуте action -->
@@ -60,7 +60,7 @@
 
 <h2>Комментарии:</h2>
 
-<!-- Комментарии тоже удобно выводить от связи @article.comments, не определяя в articles#show других переменных -->
+<!-- Комментарии тоже можно выводить от связи @article.comments, не определяя в articles#show других переменных -->
 
 <!-- Пустой комментарий, созданный формой выше будет тоже содержаться в @article.comments (последним в массиве), если вывод комментов будет располагаться ниже формы, потому если он ниже как тут, то нужно дописать костылей. -->
 <%= 'Пока еще нет комментариев' if @article.comments.empty? %>
