--- a/Rails/application/app/views/comments/_commentable.html.erb
+++ b/Rails/application/app/views/comments/_commentable.html.erb
@@ -57,7 +57,7 @@
 
 
 
-<!--                               Вариант сокрытием формы (UsersRoles) -->
+<!--                               Вариант с сокрытием формы (UsersRoles) -->
 
 <% is_current_comment = comment&.for?(commentable) %>
 
