--- a/Rails/application/app/views/articles/new.html.erb
+++ b/Rails/application/app/views/articles/new.html.erb
@@ -55,7 +55,8 @@
   <!-- Между значениями опций селектора и параметрами класса нужен пустой хэш -->
 
 
-  <p><%= f.submit %></p> <!-- будет: --> <input type="submit" name="commit" value="Save Article" data-disable-with="Save Article" />
+  <p><%= f.submit %></p> <!-- будет: -->
+  <input type="submit" name="commit" value="Save Article" data-disable-with="Save Article" />
 
 
 <% end %>
