--- a/Rails/application/app/views/layouts/mailer.html.erb
+++ b/Rails/application/app/views/layouts/mailer.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <!-- Все сили CSS для писем нужно прописывать в этом теге стайл, тк отдельные таблицы стилей не поддерживаются в письмах -->
+    <!-- Все сили CSS для писем нужно прописывать в этом теге style, тк отдельные таблицы стилей не поддерживаются в письмах -->
     <style>
       /* Email styles need to be inline */
     </style>
