--- a/Rails/application/app/views/layouts/application.html.erb
+++ b/Rails/application/app/views/layouts/application.html.erb
@@ -74,10 +74,11 @@
             <li>
               <% if I18n.locale == locale %> <!-- если текущая локаль равна конкретной локали, одной из списка доступных -->
                 <%= tag.span t(locale), class: 'dropdown-item' %> <!-- отображаем ее просто как текст с названием локали -->
-                <!-- t(locale) - это перевод названия локали на нужный язык -->
+                <!-- t(locale) - это перевод названия локали(:en, :ru) на нужный язык -->
               <% else %> <!-- если текущая локаль не равна локали из переменной, тогда сделаем ее ссылкой на переключение -->
                 <%= link_to t(locale), url_for(locale: locale), class: 'dropdown-item' %> <!-- ссылка переключения локали, добавляет имя локали в URL в (:locale) -->
-                <!-- В уроке было root_path(locale: locale) -->
+                <!-- root_path(locale: locale) - перебрасывает на главную -->
+                <!-- url_for(locale: locale)   - не перебрасывает на главную, остается на той же странице, но не сохраняет дополнительные значения в гет-запросе после знака ?, а там например стоит пагинация, чтобы это дополнительно улучшить можно использовать вариант отсюда https://stackoverflow.com/questions/35189892/rails5-params-merge-causes-errors-about-being-insecure -->
               <% end %>
             </li>
           <% end %>
