--- a/Rails/application/app/views/answers(turbo)/_answer.html.erb
+++ b/Rails/application/app/views/answers(turbo)/_answer.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag answer do %>
+<%= turbo_frame_tag answer do %> <!-- обернем каждый ответ в турбофрэйм-тег с айди от конкретного ответа -->
 
   <%= tag.article class: 'my-3 card border-0 border-top' do %> <!-- id: dom_id(answer) - тут нам больше не нужен, тк будет использоваться айди турбофрэйм тега -->
     <div>
