--- a/Rails/application/app/views/layouts/application(turbo).html.erb
+++ b/Rails/application/app/views/layouts/application(turbo).html.erb
@@ -17,7 +17,8 @@
 
       <!-- Обернем флэш-сообщения в блок с айдишником "flash" -->
       <div id="flash">
-        <%= render 'shared/flash' %> <!-- вынесем блок с отображением флэш-сообщений в отдельный паршал shared/_flash.html.erb -->
+        <!-- вынесем блок с отображением флэш-сообщений в отдельный паршал shared/_flash.html.erb -->
+        <%= render 'shared/flash' %>
       </div>
 
       <%= yield %>
