--- a/Rails/application/app/views/questions(turbo)/_question.html.erb
+++ b/Rails/application/app/views/questions(turbo)/_question.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag question do %> <!-- Обернем вопрос в турбофрэйм тег -->
-  <!-- question - для генерации айдишников будем использовать конкретные вопросы с разными айди, так что и айди турбофрэйм-ткгов будут уникальными -->
-  <!-- Теперь в данном паршале дудет рендерится измененный вопрос из update.turbo_stream.erb или удаляться из destroy.turbo_stream.erb с же айди что и тут -->
+  <!-- question - для генерации айдишников будем использовать конкретные вопросы с разными айди, так что и айди всех турбофрэйм-тегов будут уникальными -->
+  <!-- Теперь в данном паршале дудет рендерится измененный вопрос из update.turbo_stream.erb или удаляться из destroy.turbo_stream.erb с тем же айди что и тут -->
 
   <article class="card my-3">
     <section class="card-header">
@@ -10,7 +10,7 @@
 
     <div class="card-body">
       <h4><%= link_to question.title, question_path(question), data: {turbo_frame: '_top'} %></h4>
-      <!-- data: {turbo_frame: '_top'} - добавим чтобы ссылка работала и переходила на другую страницу show.html.erb вместо попытки обновления фрэйма -->
+      <!-- data: {turbo_frame: '_top'} - добавим data-атрибут turbo_frame с суффиксом '_top', который деактивирует турбофрэйм в котором находится эта ссылка(?), чтобы ссылка работала и переходила на другую страницу show.html.erb вместо попытки обновления фрэйма -->
 
       <section class="card-text">
         <%= tag.time datetime: question.formatted_created_at do %>
@@ -25,7 +25,7 @@
       <% if policy(question).edit? %>
         <!-- Теперь эта кнопка подставит форму вместо перехода на страницу редактирования -->
         <%= link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-        <!-- ?? Тут не меняем ссылку тк ссылка внутри турбофрэйма автоматически отправляет запрос в формате турбострима, и со страницы edit_question_path(question) возьмет турбофрэйм с айди турбофрэйма этого вопроса, тк запрос послан из него ?? -->
+        <!-- Тут не добавляем в ссылку в data параметр turbo_frame: тк эта ссылка уже внутри турбофрэйма и автоматически отправляет запрос в формате турбострима, и со страницы edit_question_path(question) возьмет турбофрэйм(с формой) с айди от турбофрэйма в который обернут этот вопроса, тк запрос послан из него -->
       <% end %>
 
       <% if policy(question).destroy? %>
