--- a/Rails/application/app/views/questions(turbo)/index.html.erb
+++ b/Rails/application/app/views/questions(turbo)/index.html.erb
@@ -14,23 +14,26 @@
 
 <% if policy(:question).new? %>
 
-  <!-- При нажатии данной кнопки мы отправим запрос в формате турбострима на new и он вставит контент со страницы по адресу new_question_path в тело тега turbo_frame_tag с тем же айди, что тут в data -->
+  <!-- При нажатии данной кнопки мы отправим запрос в формате турбострима на new и он вставит чать контента(ту что обернута в тубофрэйм тег с соответсвующим айди там) со страницы по адресу new_question_path на эту страницу, в тело тега turbo_frame_tag с тем же айди, что тут в data в turbo_frame: -->
   <%= link_to t('.new'), new_question_path, class: 'btn btn-primary', data: { turbo_frame: dom_id(Question.new) } %>
   <!-- new_question_path - обращаемся к экшену new, чтобы он вернул new.html.erb в котором рендерится паршал _form.html.erb с нужной нам формой -->
   <!-- data: { turbo_frame: dom_id(Question.new) } - в data прописываем какой турбо-фрэйм-тег нужно будет обновить, тоесть куда нужно будет вгрузить форму из _form.html.erb -->
   <!-- dom_id(Question.new) - генерируем значение для data-turbo-frame атрибута (тут "new_question" при помощи Question.new) для того чтобы эта ссылка вставила контент в конкретный turbo_frame_tag с тем же значением в атрибуте id -->
 
+  <!-- В итоге мы получим такую ссылку: -->
+  <a class="btn btn-primary" data-turbo-frame="new_question" href="/en/questions/new">New question</a>
+
+
   <%= turbo_frame_tag Question.new %> <!-- тоесть в данном месте мы выведем турбо фрэйм-тег -->
   <!-- turbo_frame_tag - хэлпер для создания тега турбофрэйма -->
   <!-- Question.new - при помощи нового объекта сгенерируем id для данного турбо фрэйма(тега), он генерируется при помощи метода dom_id который используется хэлпером turbo_frame_tag по умолчанию -->
 
-  <!-- В итоге мы получим: -->
-  <a class="btn btn-primary" data-turbo-frame="new_question" href="/en/questions/new">New question</a>
   <!-- Турбофрэйм-тег до нажатия кнопки: -->
   <turbo-frame id="new_question"></turbo-frame>
-  <!-- Турбофрэйм-тег после нажатия кнопки, в который вставился контент из турбофрэйма в паршале questions(turbo)/_form.html.erb, вставилось только то что в теге турбофрэйма там, без кода из new.html.erb -->
+
+  <!-- Турбофрэйм-тег после нажатия кнопки - в него вставился контент из турбофрэйма в паршале questions(turbo)/_form.html.erb, вставилось только то что в теге турбофрэйма там, без кода из new.html.erb -->
   <turbo-frame id="new_question" src="http://localhost:5000/en/questions/new" complete="">
-    <!-- src="http://localhost:5000/en/questions/new" - адрес страницы с которой мы взяли форму. Тоесть ссылка сдела запрос на страницу по этому адресу к турбофрэйму с таким же айдишником и контроллер подставил сюда контент из него -->
+    <!-- src="http://localhost:5000/en/questions/new" - адрес страницы с которой мы взяли форму. Тоесть ссылка сделала запрос на страницу по этому адресу к турбофрэйму с таким же айдишником и контроллер подставил сюда контент из него -->
     <form action="/en/questions" accept-charset="UTF-8" method="post">
       <!-- ... поля формы ... -->
     </form>
@@ -38,7 +41,7 @@
 
 <% end %>
 
-<!-- Обернем вывод всех вопросов и пагинацию в еще один фрэйм(фрэйм во фрэйме норм работает) -->
+<!-- Обернем вывод всех вопросов и пагинацию в еще один фрэйм(фрэйм во фрэйме нормально работает) -->
 <%= turbo_frame_tag 'pagination_pagy' do %>
   <%= pagination @pagy %>
 
