--- a/Rails/application/app/views/questions(turbo)/show.html.erb
+++ b/Rails/application/app/views/questions(turbo)/show.html.erb
@@ -4,7 +4,7 @@
 <article class="mb-3">
   <!-- уберем отдельную разметку для вопроса и добавим вместо нее рендер _question.html.erb -->
   <%= render @question %>
-  <!-- так добавится и турбофрэйм теги из _question.html.erb, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
+  <!-- так добавится и турбофрэйм тег из _question.html.erb, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
 </article>
 
 <!-- динамическое создание и удаление комментариев (удаляем html_id) -->
@@ -12,7 +12,7 @@
 
 <h2 class="my-3"><%= t '.write_answer' %></h2>
 
-<!-- теперь форма для создания ответа рендерится тут в турбофрэйме, а для редактирования она отрендерится через ссылку в _answer -->
+<!-- теперь форма для создания ответа рендерится в турбофрэйме, тк добавили его в answers(turbo)/_form.html.erb, а для редактирования она отрендерится через ссылку в answers(turbo)/_answer.html.erb -->
 <%= render 'answers/form' %>
 
 <h2 class="mt-5 mb-3"><%= t '.answers' %></h2>
