--- a/Rails/application/app/views/questions(turbo)/update.turbo_stream.erb
+++ b/Rails/application/app/views/questions(turbo)/update.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.replace @question, render(@question) %>
-<!-- replace - метод турбострима который заменит существующий вопрос с индексом сгенерированным от вопроса @question переданного из экшена update -->
+<!-- replace - метод турбострима который заменит существующий вопрос(содержимое турбофрэйм тега) с индексом сгенерированным от вопроса @question переданного из экшена update -->
 <!-- @question - генерируем айди от текущего вопроса -->
 <!-- render(@question) - рендерит обновленный вопрос для замены старого -->
 
