--- a/Rails/application/app/assets/srtylesheets/A_application.bootstrap.scss
+++ b/Rails/application/app/assets/srtylesheets/A_application.bootstrap.scss
@@ -1,12 +1,12 @@
 //                                    1. Вариант с подключением всего бутстрапа
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
-@import 'tom-select/dist/css/tom-select.bootstrap5';
-@import 'custom'; // подключаем наши кастомные стили _custom.scss
+@import 'tom-select/dist/css/tom-select.bootstrap5'; // подключаем стили для ТомСелект
+@import 'custom';                                    // подключаем наши кастомные стили _custom.scss
 
 
 
-//                   2. Вариант крукрвского (у меня почемуто глючил мб до перехода на вебпакер или нужен ярн инсталл ??)
+//                   2. Вариант Крукрвского (у меня почемуто глючил мб до перехода на вебпакер или нужен ярн инсталл ??)
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
