--- a/Rails/application/app/views/articles/new.html.erb
+++ b/Rails/application/app/views/articles/new.html.erb
@@ -1,26 +1,26 @@
 <h1>New article</h1>
 
-<!--                                            Форма form_for -->
+<!--                                              form_for -->
 
-<!-- Синтаксис Рэилс для формы не обязателен и можно использовать обычный HTML, как в формах Синатры -->
+<!-- Форм билдеры Рэилс для формы не обязательны и возможно использовать HTML-теги форм и полей напрямую -->
 
-<%= form_for :article, url: articles_path, data: {turbo: false} do |f| %> <!-- Тут именно с %= -->
+<%= form_for :article, url: articles_path, data: { turbo: false } do |f| %> <!-- Тут именно с %= -->
   <!-- form_for - стандартный форм билдер(хэлпер), создает форму, используется не так часто тк есть другие форм билдеры -->
   <!-- :article - параметр(? для генерации значения атрибута name ?) в единственном числе, тк форма отправляет данные об одной сущности -->
-    <!-- В итоге если посмотреть код то будет создана форма и скрытое поле в ней(нужно для безопасности приложения): -->
+    <!-- В итоге будет создана такая форма со скрытым полем в ней(нужно для безопасности приложения): -->
     <form action="/articles/new" accept-charset="UTF-8" method="post">
       <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhYRgsnOmkAZGbJQ" autocomplete="off" />
-      <!--  Поля формы -->
+      <!--  ... Другие поля формы ... -->
     </form>
-  <!-- url: articles_path (можно и захардкодить - url: '/articles') - запрос POST '/articles'. Добавляем хэлпер пути, те меняем путь, тк по умолчанию у form_for :article стоит URL GET "/articles/new" и при нажатии кнопки произойдет ошибка(тк по данному URL существует только GET-обработчик в экшене new). Для POST используется экшен create c URL '/articles', соотв надо перенаправить форму на него. Теперь если посмотреть код то адрес в теге формы изменился: -->
+  <!-- url: articles_path - передаем хлпер для URL '/articles' (можно и захардкодить, передав строку '/articles' вместо хэлпера). Добавляем хэлпер пути, тоесть меняем путь, тк по умолчанию у form_for :article стоит URL GET "/articles/new" и при нажатии кнопки произойдет ошибка(тк по данному URL существует только GET-обработчик в экшене new). Для POST используется экшен create c URL '/articles', соответственно надо перенаправить форму на него. Теперь если посмотреть код то адрес в теге формы изменился: -->
     <form action="/articles" accept-charset="UTF-8" method="post">
-      <!--  Поля формы -->
+      <!--  ... Поля формы ... -->
     </form>
-  <!-- data: {turbo:false} - нужно дописать, если в приложении используется turbo, иначе форма не отправится/обработается корректно, в теге формы появится новый атрибут -->
+  <!-- data: { turbo:false } - зададим дополнительный дата-аттрибут, только в том случае если в приложении используется Turbo, иначе форма не отправится/обработается корректно. В теге формы появится новый атрибут -->
     <form data-turbo="false" action="/articles" accept-charset="UTF-8" method="post">
-      <!--  Поля формы -->
+      <!--  ... Поля формы ... -->
     </form>
-  <!-- url: '/articles', data: {turbo:false}  - это и все дополнительное это хэш -->
+  <!-- url: '/articles', data: { turbo:false }  - это и все дополнительное это хэш -->
 
 
   <!--                                      Поля формы в Рэилс -->
