--- a/Rails/application/app/views/contacts/new.html.erb
+++ b/Rails/application/app/views/contacts/new.html.erb
@@ -23,7 +23,7 @@
 	<!-- Вывод списка ошибок Вариант 3: с использованием паршала -->
 	<%= render 'shared/errors', object: @contact %>
 	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности @contact -->
-	<!-- object: @contact - передаем значение сущности в локальную переменную(как бутто параметр в метод), которую используем в паршале, чтоб применить его к конкретной сущности что нам нужна -->
+	<!-- object: @contact - передаем значение сущности в локальную переменную object, которую используем в паршале, чтоб применить его к конкретной сущности, что нам нужна -->
 
 	<p>
 	  <%= f.label :email %>
@@ -31,13 +31,12 @@
 	</p>
 
 	<p>
-	  <%= f.label :message, 'Message' %> <!-- Поменять текст лэйбла -->
+	  <%= f.label :message %>
 	  <%= f.text_area :message %>
 	</p>
 
 	<p>
-	  <%= f.submit 'Send message' %>
-    <!-- Поменять название кнопки отправки формы можно при помощи передачи параметра в виде строки -->
+	  <%= f.submit %>
 	</p>
 
 <% end %>
