--- a/Rails/application/app/views/questions/_form.html.erb
+++ b/Rails/application/app/views/questions/_form.html.erb
@@ -2,13 +2,15 @@
 
 <!-- Генерируем форму при помощи вспомогательной функции form_with. Начиная с новых версий(6?) рекомендуется использовать эту вспомогательную функцию для генерации формы -->
 <%= form_with model: @question do |f| %>
-  <!-- model: @question  - используем экземпляр модели созданный в экшене new или edit, для new (тоесть новой пустой сущьеости) создаст URL post '/question' (тоесть отправит в экшен create), для edit (тоесть существующей сущьности) patch '/question/:id' (тоесть, подставит action="/questions/1", айди для которого возьмет в объекте @question и отправит в экшен update) -->
+  <!-- model: @question  - используем экземпляр модели созданный в экшене new или edit:
+    для new (новой пустой сущьеости) создаст URL post '/question'  - тоесть отправит в экшен create;
+    для edit (существующей сущьности) создаст URL patch '/question/:id' - тоесть, подставит action="/questions/1", айди для которого возьмет в объекте @question и отправит в экшен update -->
   <!-- url: '/question' - можно и так харкодить URL вместо model: @question, но тогда придется создавать 2 формы -->
 
   <!-- Для edit будет добавлено скрытое поле: -->
   <input type="hidden" name="_method" value="patch" autocomplete="off" />
 
-  <!-- Для представления edit значения полей будут автоматически подставлены из @question -->
+  <!-- Для представления edit, значения полей будут автоматически подставлены из @question -->
 
   <div>
     <%= f.label :title %>
