--- a/Rails/application/app/views/questions/index.html.erb
+++ b/Rails/application/app/views/questions/index.html.erb
@@ -29,11 +29,11 @@
 <!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
 <%== pagy_bootstrap_nav @pagy %>
 
-<!-- Пагинация вариант 2-1: pagy - скрываяем отображение кнопок если только 1 страница -->
+<!-- Пагинация вариант 2-1: pagy - скрываяем отображение кнопок, если есть только 1 страница -->
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 <!-- pages - метод возвращает коллич страниц -->
 
-<!-- Пагинация вариант 2-2: pagy - аналогично предыдущему но вынесено в хэлпер pagination чтобы не писать везде условие -->
+<!-- Пагинация вариант 2-2: pagy - аналогично предыдущему, но вынесено в хэлпер pagination чтобы не писать везде условие -->
 <%= pagination(@pagy) %> <!-- теперь мы просто можем подставлять это везде -->
 
 <% @questions.each do |question| %>
